--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
     <section class="second-banner">
         <div class="half-width">
-            <img src="images/jhankar.png" alt="">
+            <img src="images/profile2.png" alt="">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
