--- a/index.html
+++ b/index.html
@@ -11,18 +11,26 @@
 </head>
 
 <body>
+    <div class="navbar">
+        <ul class="nav-links">
+            <li><a class="active" href="#home">Home</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About</a></li>
+          </ul>
+    </div>
     <section class="top-banner">
-    <div class="half-width">
-        <h1>Welcome to</h1>
-        <h1><span class="orange-highlight">Hazrat Ali</span> World</h1>
-        <h3>Build Climber and Train Stopper</h3>
-        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-        <a class="hire-button" target="_blank" href="https://www.linkedin.com/in/s-m-hazrat-ali-b1590a1b7/">HIRE ME</a>
-    </div>
-    <div class="half-width">
-        <img src="images/profile1.png" alt="profile1">
-        
-    </div>
+        <div class="half-width">
+            <h1>HELLO, I'M</h1>
+            <h1><span class="orange-highlight">Hazrat Ali</span></h1>
+            <p> I will not stop until I become the Web Development Hero.</p>
+            <a class="hire-button" target="_blank" href="https://www.linkedin.com/in/s-m-hazrat-ali-b1590a1b7/">HIRE
+                ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/profile1.png" alt="profile1">
+
+        </div>
     </section>
     <section class="second-banner">
         <div class="half-width">
@@ -30,28 +38,59 @@
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
-            <h3>Become a web developer</h3>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
             <a class="hire-button" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
-    <section class="experience-area">
-        <h2>Experiences</h2>
-        <div class="half-width single-experience" id="fullstack-web-dev-bordercolor">
-            <h2>Full Stack Web Developer</h2>
-            <h3 class="orange-highlight">2021-Present | Pro Level Developer</h3>
-            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    <section class="working-projects">
+        <h2 id="working-project-heading">LEATEST WORKING PROJECT</h2>
+        <div class="projects">
+            <img src="images/image 4.png" alt="">
+            <h4>Power-x-gym(gym website)</h4>
+            <p>Well organized and easy to understand Web building tutorials with lots of examples of how to use HTML,
+                CSS, JavaScript, SQL, PHP, Python, Bootstrap, Java.</p>
         </div>
-        <div class="half-width single-experience" id="baby-web-dev-bordercolor">
-            <h2>Baby Web Developer</h2>
-            <h3 class="orange-highlight">2020-2021 | Programming Hero Learner</h3>
-            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        <div class="projects">
+            <img src="images/image 5.png" alt="">
+            <h4>Power-x-gym(gym website)</h4>
+            <p>Well organized and easy to understand Web building tutorials with lots of examples of how to use HTML,
+                CSS, JavaScript, SQL, PHP, Python, Bootstrap, Java.</p>
+        </div>
+        <div class="projects">
+            <img src="images/image 8.png" alt="">
+            <h4>Power-x-gym(gym website)</h4>
+            <p>Well organized and easy to understand Web building tutorials with lots of examples of how to use HTML,
+                CSS, JavaScript, SQL, PHP, Python, Bootstrap, Java.</p>
         </div>
     </section>
-    <footer> 
-        <p class="copyright">
-            © Hazrat 2021, All rights reserved.
-        </p>
+    <section class="our-team">
+        <h2>Our Team</h2>
+        <div class="team-member">
+            <img src="images/jhankar.png" alt="">
+            <p>Well organized and easy to understand Web building tutorials.</p>
+        </div>
+        <div class="team-member">
+            <img src="images/jhankar.png" alt="">
+            <p>Well organized and easy to understand Web building tutorials.</p>
+        </div>
+        <div class="team-member">
+            <img src="images/jhankar.png" alt="">
+            <p>Well organized and easy to understand Web building tutorials.</p>
+        </div>
+    </section>
+    <footer>
+        <div class="chat">
+            <p class="chat-in-line" id="work-inquiry">WORK INQUIRY</p>
+            <a class="hire-button chat-in-line" target="_blank" href="">let's chat</a>
+        </div>
+        <div class="finishing-line">
+            <p>STAY CONNECTED</p>
+            <h2>hazrat17016@gmail.com</h2>
+            <img src="images/image 6.png" alt="">
+            <img src="images/image 7.png" alt="">
+            <img src="images/Group 33059.png" alt="">
+        </div>
     </footer>
 </body>
 
