add a new section named OurTeam

--- a/index.html
+++ b/index.html
@@ -6,77 +6,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I'm Hazrat</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="navbar">
         <ul class="nav-links">
-            <li><a class="active" href="#home">Home</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">About</a></li>
-          </ul>
+            <li><a class="active" href="">About</a></li>
+            <li><a href="">Work</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
     </div>
     <section class="top-banner">
         <div class="half-width">
             <h1>HELLO, I'M</h1>
             <h1><span class="orange-highlight">Hazrat Ali</span></h1>
-            <p> I will not stop until I become the Web Development Hero.</p>
+            <p> A full stack allaround designer that placerat
+                in massa consectetur</p>
             <a class="hire-button" target="_blank" href="https://www.linkedin.com/in/s-m-hazrat-ali-b1590a1b7/">HIRE
                 ME</a>
         </div>
-        <div class="half-width">
-            <img src="images/profile1.png" alt="profile1">
+        <div class="half-width-image">
+            <img src="images/profile4.png" alt="profile1">
 
         </div>
     </section>
     <section class="second-banner">
-        <div class="half-width">
-            <img src="images/profile2.png" alt="">
+        <div class="half-width-image">
+            <img src="images/profile5.png" alt="">
         </div>
         <div class="half-width">
-            <h1>Dream Big</h1>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
-                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a class="hire-button" href="">DOWNLOAD RESUME</a>
+            <h1>ABOUT</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <a class="hire-button" href="">Download CV</a>
         </div>
     </section>
     <section class="working-projects">
-        <h2 id="working-project-heading">LEATEST WORKING PROJECT</h2>
+        <h2 id="working-project-heading"><span id="colorful-leatest">LEATEST</span> WORKING PROJECT</h2>
         <div class="projects">
             <img src="images/image 4.png" alt="">
             <h4>Power-x-gym(gym website)</h4>
-            <p>Well organized and easy to understand Web building tutorials with lots of examples of how to use HTML,
-                CSS, JavaScript, SQL, PHP, Python, Bootstrap, Java.</p>
+            <p>Lorem Ipsum is simply dummy text of the
+                printing and typesetting industry.
+            </p>
         </div>
         <div class="projects">
             <img src="images/image 5.png" alt="">
-            <h4>Power-x-gym(gym website)</h4>
-            <p>Well organized and easy to understand Web building tutorials with lots of examples of how to use HTML,
-                CSS, JavaScript, SQL, PHP, Python, Bootstrap, Java.</p>
+            <h4>Creative Agency</h4>
+            <p>Lorem Ipsum is simply dummy text of the
+                printing and typesetting industry.
+            </p>
         </div>
         <div class="projects">
             <img src="images/image 8.png" alt="">
-            <h4>Power-x-gym(gym website)</h4>
-            <p>Well organized and easy to understand Web building tutorials with lots of examples of how to use HTML,
-                CSS, JavaScript, SQL, PHP, Python, Bootstrap, Java.</p>
+            <h4>Hard Rock Music</h4>
+            <p>Lorem Ipsum is simply dummy text of the
+                printing and typesetting industry.
+            </p>
         </div>
     </section>
     <section class="our-team">
-        <h2>Our Team</h2>
+        <h2 class="bold" id="our-team">Our Team</h2>
         <div class="team-member">
-            <img src="images/jhankar.png" alt="">
-            <p>Well organized and easy to understand Web building tutorials.</p>
+            <img src="images/mrx.png" alt="">
+            <h4>MR.X</h4>
+            <p>Web Developer.</p>
         </div>
         <div class="team-member">
-            <img src="images/jhankar.png" alt="">
-            <p>Well organized and easy to understand Web building tutorials.</p>
+            <img src="images/mry.png" alt="">
+            <h4>MR.Y</h4>
+            <p>Web Developer.</p>
         </div>
         <div class="team-member">
-            <img src="images/jhankar.png" alt="">
-            <p>Well organized and easy to understand Web building tutorials.</p>
+            <img src="images/zmr.jpg" alt="">
+            <h4>MR.Z</h4>
+            <p>Web Developer.</p>
         </div>
     </section>
     <footer>
